add ref counter on rbd objects
